--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_ru.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_ru.properties
@@ -1,6 +1,6 @@
 label.view-references-title=\u0421\u0432\u044f\u0437\u0430\u0442\u044c \u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u044f
 label.title.parentchild={0}, {1}
-label.create-references-title=\u041d\u043e\u0432\u043e\u0435 \u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
+label.create-references-title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
 label.edit-references-title=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
 label.general=\u041e\u0431\u0449\u0435\u0435
 label.type=\u0422\u0438\u043f
@@ -10,7 +10,7 @@ label.parentchild=\u0420\u043e\u0434\u0438\u0442\u0435\u043b\u044c\u0441\u043a\u
 label.source=\u0418\u0441\u0442\u043e\u0447\u043d\u0438\u043a
 label.target=\u0426\u0435\u043b\u044c
 
-button.newreference=\u041d\u043e\u0432\u043e\u0435 \u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
+button.newreference=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
 
 message.confirm.removereference.title=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
 message.confirm.removereference.text=\u0412\u044b \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043b\u044c\u043d\u043e \u0436\u0435\u043b\u0430\u0435\u0442\u0435 \u0443\u0434\u0430\u043b\u0438\u0442\u044c \u00ab{0}\u00bb?
