--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_ru.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_ru.properties
@@ -1,8 +1,8 @@
 ## Buttons
-button.new-category=\u041d\u043e\u0432\u0430\u044f \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f
-button.new-folder=\u041d\u043e\u0432\u0430\u044f \u043f\u0430\u043f\u043a\u0430
-button.new-unfiledRecords-folder=\u041d\u043e\u0432\u0430\u044f \u043f\u0430\u043f\u043a\u0430
-button.new-hold=\u041d\u043e\u0432\u043e\u0435 \u0443\u0434\u0435\u0440\u0436\u0430\u043d\u0438\u0435
+button.new-category=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f
+button.new-folder=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0430
+button.new-unfiledRecords-folder=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0430
+button.new-hold=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0443\u0434\u0435\u0440\u0436\u0430\u043d\u0438\u0435
 button.upload=\u0424\u0430\u0439\u043b
 button.declare-record=\u041e\u0431\u044a\u044f\u0432\u0438\u0442\u044c \u0437\u0430\u043f\u0438\u0441\u044c
 button.import=\u0418\u043c\u043f\u043e\u0440\u0442
@@ -24,13 +24,13 @@ button.manage-rules=\u041d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c \u043
 button.options=\u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b
 
 ## Dialog labels
-label.new-rma_recordCategory.title=\u041d\u043e\u0432\u0430\u044f \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f \u0437\u0430\u043f\u0438\u0441\u0435\u0439
+label.new-rma_recordCategory.title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u044f \u0437\u0430\u043f\u0438\u0441\u0435\u0439
 label.new-rma_recordCategory.header=\u041f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0438 \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u0438 \u0437\u0430\u043f\u0438\u0441\u0435\u0439
-label.new-rma_recordFolder.title=\u041d\u043e\u0432\u0430\u044f \u043f\u0430\u043f\u043a\u0430 \u0437\u0430\u043f\u0438\u0441\u0435\u0439
+label.new-rma_recordFolder.title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0430 \u0437\u0430\u043f\u0438\u0441\u0435\u0439
 label.new-rma_recordFolder.header=\u041f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0438 \u043f\u0430\u043f\u043a\u0438 \u0437\u0430\u043f\u0438\u0441\u0435\u0439
-label.new-rma_hold.title=\u041d\u043e\u0432\u043e\u0435 \u0443\u0434\u0435\u0440\u0436\u0430\u043d\u0438\u0435
+label.new-rma_hold.title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0443\u0434\u0435\u0440\u0436\u0430\u043d\u0438\u0435
 label.new-rma_hold.header=\u041f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0438 \u043d\u043e\u0432\u043e\u0433\u043e \u0443\u0434\u0435\u0440\u0436\u0430\u043d\u0438\u044f
-label.new-rma_unfiledRecordFolder.title=\u041d\u043e\u0432\u0430\u044f \u043f\u0430\u043f\u043a\u0430
+label.new-rma_unfiledRecordFolder.title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043f\u0430\u043f\u043a\u0430
 label.new-rma_unfiledRecordFolder.header=\u041f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0438 \u043f\u0430\u043f\u043a\u0438
 label.new-rma_nonElectronicDocument.title=\u041d\u0435\u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430\u044f \u0437\u0430\u043f\u0438\u0441\u044c
 label.new-rma_nonElectronicDocument.header=\u0421\u0432\u0435\u0434\u0435\u043d\u0438\u044f \u043e \u0437\u0430\u043f\u0438\u0441\u0438
