--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_ru.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_ru.properties
@@ -1,4 +1,4 @@
-label.title-new-reference = \u041d\u043e\u0432\u0430\u044f \u0441\u0441\u044b\u043b\u043a\u0430
+label.title-new-reference = \u0421\u043e\u0437\u0434\u0430\u0442\u044c \u0441\u0441\u044b\u043b\u043a\u0430
 label.select = \u0412\u044b\u0431\u0440\u0430\u0442\u044c
 label.record-link = \u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0437\u0430\u043f\u0438\u0441\u044c
 label.record-rel = \u041e\u0442\u043d\u043e\u0448\u0435\u043d\u0438\u0435
